--- a/templates/home.html
+++ b/templates/home.html
@@ -171,14 +171,18 @@
 
 
 <div class="container">
-    <h2 class="text-center m-5">Recommendations</h2>
-    <div class="row">
+ 
+    <div class="alert alert-danger mt-3" role="alert">
+        These are the similar Recommendations!
+      </div>
+    <div class="row mb-3">
         {% for item in dict.rec %}
         <div class="col-md-4">
         <div class="card">
             <img src="{{item.image_url}}" class="card-img-top" alt="Image">
             <div class="card-body">
-                <h5 class="card-title">{{item.name}}</h5>
+
+                <h5 class="card-title">{{item[0]}}</h5>
 
                 <p class="card-text">{{item.description}}</p>
             </div>
