recipe generation is added

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/imagedetect" id="my-text">Detect Food</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/generaterecipe" id="my-text">Create Recipe</a>
+                    </li>
                 </ul>
             </div>
         </div>
